<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/app/res-auto">
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_backup"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/backup"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_admin_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/admin_profile"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
